[gd_scene load_steps=14 format=2]

[ext_resource path="res://montserrat_extrabold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/back_small.png" type="Texture" id=4]
[ext_resource path="res://NextButton/NextButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://SettingsMenu/SettingsMenu.gd" type="Script" id=6]
[ext_resource path="res://SceneTransition/SceneTransition.tscn" type="PackedScene" id=7]
[ext_resource path="res://SceneTransitionOut/SceneTransitionOut.tscn" type="PackedScene" id=8]
[ext_resource path="res://Background/Background.tscn" type="PackedScene" id=9]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/true.png-cdda6da376e214ccba454f067f4945d6.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/false.png-84dcec52cbf5773f95affe689d4fcaa0.stex"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/true.png-cdda6da376e214ccba454f067f4945d6.stex"

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/false.png-84dcec52cbf5773f95affe689d4fcaa0.stex"

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 9 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 290.0
margin_top = 236.0
margin_right = 733.0
margin_bottom = 296.0
color = Color( 0.266667, 0.192157, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 290.0
margin_top = 306.639
margin_right = 733.0
margin_bottom = 366.639
color = Color( 0.266667, 0.192157, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 306.0
margin_top = 230.0
margin_right = 718.0
margin_bottom = 370.0

[node name="Music" type="CheckBox" parent="CenterContainer/VBoxContainer"]
margin_right = 412.0
margin_bottom = 68.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_icons/checked = SubResource( 1 )
custom_icons/unchecked = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
pressed = true
enabled_focus_mode = 0
text = " Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffects" type="CheckBox" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 412.0
margin_bottom = 140.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_icons/checked = SubResource( 4 )
custom_icons/unchecked = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
pressed = true
enabled_focus_mode = 0
text = " Sound Effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 65.0
margin_bottom = 70.0
icon = ExtResource( 4 )

[node name="SceneTransition" parent="." instance=ExtResource( 7 )]
visible = false

[node name="SceneTransitionExit" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="toggled" from="CenterContainer/VBoxContainer/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/SoundEffects" to="." method="_on_SoundEffects_toggled"]
[connection signal="continue_clicked" from="BackButton" to="." method="_on_BackButton_clicked"]
[connection signal="scene_transition_exit_complete" from="SceneTransitionExit" to="." method="_on_SceneTransitionExit_complete"]
